// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Current Form Values returns the current form's Interaction Type, also known just as Channel Type 1`] = `"voice"`;

exports[`Current Form Values returns the current form's mapping value, also known just as value 1`] = `"zendesk"`;

exports[`Current Form Values returns the current form's mapping, also known as interaction field 1`] = `"source"`;

exports[`Retrieve Dispatch Mappings Initial Form Values from State Return Custom Made initial values 1`] = `"mockResult"`;

exports[`Retrieve Dispatch Mappings Initial Form Values from State Return regular initial values 1`] = `
Immutable.Map {
  "active": true,
  "interactionField": "customer",
}
`;

exports[`Retrieve Dispatch values from State Compare values from state with current form, interaction type and channel 1`] = `
Immutable.Map {
  "id": "1",
  "value": "zendesk",
  "channelType": "voice",
}
`;

exports[`Retrieve Dispatch values from State Return Dispatch Mappings from state 1`] = `
Immutable.List [
  Immutable.Map {
    "id": "1",
    "value": "zendesk",
    "channelType": "voice",
  },
  Immutable.Map {
    "id": "2",
    "value": "zendesk",
    "channelType": "voice",
  },
]
`;
